; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_metahost.c_set_environment.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_metahost.c_set_environment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@set_environment.pathW = internal constant [5 x i8] c"PATH\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_environment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_environment(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @MAX_PATH, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = udiv i64 %7, 1
  %11 = trunc i64 %10 to i32
  %12 = call i32 @GetEnvironmentVariableW(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @set_environment.pathW, i64 0, i64 0), i8* %9, i32 %11)
  %13 = call i32 @strlenW(i8* %9)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %5, align 4
  %16 = sext i32 %14 to i64
  %17 = getelementptr inbounds i8, i8* %9, i64 %16
  store i8 59, i8* %17, align 1
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %9, i64 %19
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @strcpyW(i8* %20, i32 %21)
  %23 = call i32 @SetEnvironmentVariableW(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @set_environment.pathW, i64 0, i64 0), i8* %9)
  %24 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %24)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetEnvironmentVariableW(i8*, i8*, i32) #2

declare dso_local i32 @strlenW(i8*) #2

declare dso_local i32 @strcpyW(i8*, i32) #2

declare dso_local i32 @SetEnvironmentVariableW(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
